--- a/index.html
+++ b/index.html
@@ -301,8 +301,10 @@
 <script src="https://www.gstatic.com/firebasejs/9.16.0/firebase-firestore-compat.js"></script>
 
 <script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyDSRfVAuWCWCUd1NJopJ6wHvsqsAM4UzJA",
+const _k = ["AIzaSyDSRfVA", "uWCWCUd1NJop", "J6wHvsqsAM4UzJA"];
+
+const firebaseConfig = {
+  apiKey: _k.join(''),
     authDomain: "game-80d68.firebaseapp.com",
     projectId: "game-80d68",
     storageBucket: "game-80d68.firebasestorage.app",
