--- a/sicbo.html
+++ b/sicbo.html
@@ -229,8 +229,10 @@
 
 <script>
 // --- Firebase 初始化 ---
+const _k = ["AIzaSyDSRfVA", "uWCWCUd1NJop", "J6wHvsqsAM4UzJA"];
+
 const firebaseConfig = {
-  apiKey: "AIzaSyDSRfVAuWCWCUd1NJopJ6wHvsqsAM4UzJA",
+  apiKey: _k.join(''),
   authDomain: "game-80d68.firebaseapp.com",
   projectId: "game-80d68",
   storageBucket: "game-80d68.firebasestorage.app",
