--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
       effect: [
         { id: 'e_gold', name: '✨ 黃金呼吸', price: 20000000, class: 'fx-gold' },
         { id: 'e_fire', name: '🔥 地獄火', price: 8000000, class: 'fx-fire' },
-        { id: 'e_neon', name: '🌈 霓虹極光', price: 30000000, class: 'fx-neon' }
+        { id: 'e_neon', name: '🌈 霓虹極光', price: 30, class: 'fx-neon' }
       ]
     };
 
